Update Model Files

--- a/projects/wq/grandcanyon/index.html
+++ b/projects/wq/grandcanyon/index.html
@@ -289,8 +289,8 @@
           <div class="row">
 
             <h3>River Discharge Forecast</h3>
-            <div class="accordion" id="accordionExample">
-              <!-- NEW ITEM -->
+            
+            <!-- <div class="accordion" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="GCDQ">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -313,7 +313,6 @@
                   </div>
                 </div>
               </div>
-              <!-- NEW ITEM -->
               <div class="accordion-item">
                 <h2 class="accordion-header" id="RM0Q">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -336,7 +335,6 @@
                   </div>
                 </div>
               </div>
-              <!-- NEW ITEM -->
               <div class="accordion-item">
                 <h2 class="accordion-header" id="RM88Q">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -359,7 +357,6 @@
                   </div>
                 </div>
               </div>
-              <!-- NEW ITEM -->
               <div class="accordion-item">
                 <h2 class="accordion-header" id="RM266Q">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -382,13 +379,26 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="row">
               <div class="col-xl-12 col-lg-12">
                 <div class="card shadow mb-4">
                   <div class="card-body">
-                    <div class="responsive-plot" id="tempGCD" data-key="GCD">
+                    <div class="responsive-plot" id="flowPlot" data-key="GCD">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <h3>River Temperature Forecast</h3>
+
+            <div class="row">
+              <div class="col-xl-12 col-lg-12">
+                <div class="card shadow mb-4">
+                  <div class="card-body">
+                    <div class="responsive-plot" id="tempPlot" data-key="GCD">
                     </div>
                   </div>
                 </div>
